auto reload map

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -6,27 +6,24 @@
 	"layers": {
 		"tiles/links_and_routers": {
 			"provider": {
-				"name": "mapnik",
-				"mapfile": "/usr/share/ffmap/links_and_routers.xml",
-				"layers": [
-					[0, null],
-					[1, null]
-				]
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/links_and_routers.xml"
+				}
 			},
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
 		},
 		"tiles/hoods": {
 			"provider": {
-				"name":	"mapnik",
-				"mapfile": "/usr/share/ffmap/hoods.xml",
-				"layers": [
-					[0, null],
-					[1, null]
-				]
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/hoods.xml"
+				}
 			},
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
 		}
-	}
+	},
+	"logging": "info"
 }
