fff-map: Add layer for KeyExchange v2
Draft version. On my local setup, I had to create CSVs manually
with mkcsv.py and copy them to /var/...

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -23,6 +23,16 @@
 			},
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
+		},
+		"tiles/hoodsv2": {
+			"provider": {
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/hoodsv2.xml"
+				}
+			},
+			"metatile": {"buffer": 128},
+			"cache lifespan": 300
 		}
 	},
 	"logging": "info"
