Separate hoods into layers
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -4,11 +4,21 @@
 		"path": "/var/cache/ffmap/tiles/"
 	},
 	"layers": {
-		"tiles/links_and_routers": {
+		"tiles/routers": {
 			"provider": {
 				"class": "dynmapnik:DynMapnik",
 				"kwargs": {
-					"mapfile": "/usr/share/ffmap/links_and_routers.xml"
+					"mapfile": "/usr/share/ffmap/routers.xml"
+				}
+			},
+			"metatile": {"buffer": 128},
+			"cache lifespan": 300
+		},
+		"tiles/routers_v2": {
+			"provider": {
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/routers_v2.xml"
 				}
 			},
 			"metatile": {"buffer": 128},
