Rename hoodsv2 to hoods_v2 for consistency
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -34,11 +34,11 @@
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
 		},
-		"tiles/hoodsv2": {
+		"tiles/hoods_v2": {
 			"provider": {
 				"class": "dynmapnik:DynMapnik",
 				"kwargs": {
-					"mapfile": "/usr/share/ffmap/hoodsv2.xml"
+					"mapfile": "/usr/share/ffmap/hoods_v2.xml"
 				}
 			},
 			"metatile": {"buffer": 128},
