Global: Identify local routers and indicate their status
This detects local routers based on knowing their hood, but not
having the hood listed in hoodsv2 table.

This classification is performed when the routers' alfred data
is parsed. Thus, offline routers won't change.

This requires changes to the MySQL database!

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -24,6 +24,16 @@
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
 		},
+		"tiles/routers_local": {
+			"provider": {
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/routers_local.xml"
+				}
+			},
+			"metatile": {"buffer": 128},
+			"cache lifespan": 300
+		},
 		"tiles/hoods": {
 			"provider": {
 				"class": "dynmapnik:DynMapnik",
