map: Add Polyhood support
This actually implements polyhood support for the MAP.

This is not connected to the earlier commit which provides
database support for polyhoods. This patch will work
independent of the earlier one.

Although the KeyXchange does not provide polyhood data so far,
the Monitoring's implementation can already be put in place and
will take up the data as soon as it's there.

Note that since we only provide an additional layer for the
map, the overall footprint of this change is relatively small.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

Tested-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/mapnik/tilestache.cfg
+++ b/ffmap/mapnik/tilestache.cfg
@@ -53,6 +53,16 @@
 			},
 			"metatile": {"buffer": 128},
 			"cache lifespan": 300
+		},
+		"tiles/hoods_poly": {
+			"provider": {
+				"class": "dynmapnik:DynMapnik",
+				"kwargs": {
+					"mapfile": "/usr/share/ffmap/hoods_poly.xml"
+				}
+			},
+			"metatile": {"buffer": 128},
+			"cache lifespan": 300
 		}
 	},
 	"logging": "info"
